--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dayjs": "^1.11.10",
     "lucide": "^0.364.0",
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
